--- a/app/html/blocks/footer.html
+++ b/app/html/blocks/footer.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="footer__inner">
       <a class="footer__logo logo" href="/">
-        <img class="footer__logo-img" src="../../images/logo.webp" alt="">
+        <img class="footer__logo-img" src="images/logo.webp" alt="">
         <p class="footer__logo-text">
           Лестницы <br>для всех
         </p>
