--- a/app/html/blocks/quiz.html
+++ b/app/html/blocks/quiz.html
@@ -1,4 +1,4 @@
-<section class="quiz-block" id="quiz-block-one">
+<section class="quiz-block">
   <div class="container">
     <h2 class="quiz-block__title _title">
       Сконфигурируйте лестницу <br><span>под свой интерьер</span>
@@ -33,7 +33,7 @@
                   <label class="quiz-list__label">
                     <input type="radio" name="quest-1" class="radio-input" value="На улицу" required="">
                     <div class="quiz-list__item-wrapper">
-                      <img class="quiz-list__img _img _img" src="../../images/quiz-1.webp" alt="">
+                      <img class="quiz-list__img _img _img" src="images/quiz-1.webp" alt="">
                     </div>
 
                     <h6 class="quiz-list__item-title">
@@ -45,7 +45,7 @@
                   <label class="quiz-list__label">
                     <input type="radio" name="quest-1" class="radio-input" value="В помещение" required="">
                     <div class="quiz-list__item-wrapper">
-                      <img class="quiz-list__img _img _img" src="../../images/quiz-2.webp" alt="">
+                      <img class="quiz-list__img _img _img" src="images/quiz-2.webp" alt="">
                     </div>
 
                     <h6 class="quiz-list__item-title">
@@ -79,7 +79,7 @@
                   <label class="quiz-list__label">
                     <input type="radio" name="quest-2" class="radio-input" value="Металлокаркас крыльца" required="">
                     <div class="quiz-list__item-wrapper">
-                      <img class="quiz-list__img _img" src="../../images/quiz-3.webp" alt="">
+                      <img class="quiz-list__img _img" src="images/quiz-3.webp" alt="">
                     </div>
 
                     <h6 class="quiz-list__item-title">
@@ -91,7 +91,7 @@
                   <label class="quiz-list__label">
                     <input type="radio" name="quest-2" class="radio-input" value="Береговые лестницы" required="">
                     <div class="quiz-list__item-wrapper">
-                      <img class="quiz-list__img _img" src="../../images/quiz-3.webp" alt="">
+                      <img class="quiz-list__img _img" src="images/quiz-3.webp" alt="">
                     </div>
 
                     <h6 class="quiz-list__item-title">
@@ -103,7 +103,7 @@
                   <label class="quiz-list__label">
                     <input type="radio" name="quest-2" class="radio-input" value="Лестницы в подвал" required="">
                     <div class="quiz-list__item-wrapper">
-                      <img class="quiz-list__img _img" src="../../images/quiz-3.webp" alt="">
+                      <img class="quiz-list__img _img" src="images/quiz-3.webp" alt="">
                     </div>
 
                     <h6 class="quiz-list__item-title">
@@ -115,7 +115,7 @@
                   <label class="quiz-list__label">
                     <input type="radio" name="quest-2" class="radio-input" value="Спуски к воде и причалы" required="">
                     <div class="quiz-list__item-wrapper">
-                      <img class="quiz-list__img _img" src="../../images/quiz-3.webp" alt="">
+                      <img class="quiz-list__img _img" src="images/quiz-3.webp" alt="">
                     </div>
 
                     <h6 class="quiz-list__item-title">
@@ -128,7 +128,7 @@
                     <input type="radio" name="quest-2" class="radio-input" value=" Эвакуационные и пожарные лестницы"
                       required="">
                     <div class="quiz-list__item-wrapper">
-                      <img class="quiz-list__img _img" src="../../images/quiz-3.webp" alt="">
+                      <img class="quiz-list__img _img" src="images/quiz-3.webp" alt="">
                     </div>
 
                     <h6 class="quiz-list__item-title">
@@ -162,7 +162,7 @@
                   <label class="quiz-list__label">
                     <input type="radio" name="quest-3" class="radio-input" value="Поворот на 90 градусов">
                     <div class="quiz-list__item-wrapper">
-                      <img class="quiz-list__img _img" src="../../images/quiz-4.webp" alt="">
+                      <img class="quiz-list__img _img" src="images/quiz-4.webp" alt="">
                     </div>
 
                     <h6 class="quiz-list__item-title">
@@ -174,7 +174,7 @@
                   <label class="quiz-list__label">
                     <input type="radio" name="quest-3" class="radio-input" value="Прямая">
                     <div class="quiz-list__item-wrapper">
-                      <img class="quiz-list__img _img" src="../../images/quiz-4.webp" alt="">
+                      <img class="quiz-list__img _img" src="images/quiz-4.webp" alt="">
                     </div>
 
                     <h6 class="quiz-list__item-title">
@@ -186,7 +186,7 @@
                   <label class="quiz-list__label">
                     <input type="radio" name="quest-3" class="radio-input" value="Поворот на 180 градусов">
                     <div class="quiz-list__item-wrapper">
-                      <img class="quiz-list__img _img" src="../../images/quiz-4.webp" alt="">
+                      <img class="quiz-list__img _img" src="images/quiz-4.webp" alt="">
                     </div>
 
                     <h6 class="quiz-list__item-title">
@@ -198,7 +198,7 @@
                   <label class="quiz-list__label">
                     <input type="radio" name="quest-3" class="radio-input" value="Другая">
                     <div class="quiz-list__item-wrapper">
-                      <img class="quiz-list__img _img" src="../../images/quiz-4.webp" alt="">
+                      <img class="quiz-list__img _img" src="images/quiz-4.webp" alt="">
                     </div>
 
                     <h6 class="quiz-list__item-title">
@@ -356,7 +356,7 @@
                   <label class="quiz-list__label">
                     <input type="radio" name="quest-5" class="radio-input" value="Сосна">
                     <div class="quiz-list__item-wrapper">
-                      <img class="quiz-list__img _img" src="../../images/quiz-5.webp" alt="">
+                      <img class="quiz-list__img _img" src="images/quiz-5.webp" alt="">
                     </div>
 
                     <h6 class="quiz-list__item-title">
@@ -368,7 +368,7 @@
                   <label class="quiz-list__label">
                     <input type="radio" name="quest-5" class="radio-input" value="Лиственница">
                     <div class="quiz-list__item-wrapper">
-                      <img class="quiz-list__img _img" src="../../images/quiz-5.webp" alt="">
+                      <img class="quiz-list__img _img" src="images/quiz-5.webp" alt="">
                     </div>
 
                     <h6 class="quiz-list__item-title">
@@ -380,7 +380,7 @@
                   <label class="quiz-list__label">
                     <input type="radio" name="quest-5" class="radio-input" value="Бук">
                     <div class="quiz-list__item-wrapper">
-                      <img class="quiz-list__img _img" src="../../images/quiz-5.webp" alt="">
+                      <img class="quiz-list__img _img" src="images/quiz-5.webp" alt="">
                     </div>
 
                     <h6 class="quiz-list__item-title">
@@ -392,7 +392,7 @@
                   <label class="quiz-list__label">
                     <input type="radio" name="quest-5" class="radio-input" value="Дуб">
                     <div class="quiz-list__item-wrapper">
-                      <img class="quiz-list__img _img" src="../../images/quiz-5.webp" alt="">
+                      <img class="quiz-list__img _img" src="images/quiz-5.webp" alt="">
                     </div>
 
                     <h6 class="quiz-list__item-title">
@@ -404,7 +404,7 @@
                   <label class="quiz-list__label">
                     <input type="radio" name="quest-5" class="radio-input" value="Ясень">
                     <div class="quiz-list__item-wrapper">
-                      <img class="quiz-list__img _img" src="../../images/quiz-5.webp" alt="">
+                      <img class="quiz-list__img _img" src="images/quiz-5.webp" alt="">
                     </div>
 
                     <h6 class="quiz-list__item-title">
@@ -416,7 +416,7 @@
                   <label class="quiz-list__label">
                     <input type="radio" name="quest-5" class="radio-input" value="Террасная доска">
                     <div class="quiz-list__item-wrapper">
-                      <img class="quiz-list__img _img" src="../../images/quiz-5.webp" alt="">
+                      <img class="quiz-list__img _img" src="images/quiz-5.webp" alt="">
                     </div>
 
                     <h6 class="quiz-list__item-title">
@@ -428,7 +428,7 @@
                   <label class="quiz-list__label">
                     <input type="radio" name="quest-5" class="radio-input" value="ПВЛ лист">
                     <div class="quiz-list__item-wrapper">
-                      <img class="quiz-list__img _img" src="../../images/quiz-5.webp" alt="">
+                      <img class="quiz-list__img _img" src="images/quiz-5.webp" alt="">
                     </div>
 
                     <h6 class="quiz-list__item-title">
@@ -440,7 +440,7 @@
                   <label class="quiz-list__label">
                     <input type="radio" name="quest-5" class="radio-input" value="Чечевица">
                     <div class="quiz-list__item-wrapper">
-                      <img class="quiz-list__img _img" src="../../images/quiz-5.webp" alt="">
+                      <img class="quiz-list__img _img" src="images/quiz-5.webp" alt="">
                     </div>
 
                     <h6 class="quiz-list__item-title">
@@ -452,7 +452,7 @@
                   <label class="quiz-list__label">
                     <input type="radio" name="quest-5" class="radio-input" value="Не нужна">
                     <div class="quiz-list__item-wrapper">
-                      <img class="quiz-list__img _img" src="../../images/quiz-5.webp" alt="">
+                      <img class="quiz-list__img _img" src="images/quiz-5.webp" alt="">
                     </div>
 
                     <h6 class="quiz-list__item-title">
@@ -486,7 +486,7 @@
                   <label class="quiz-list__label">
                     <input type="radio" name="quest-6" class="radio-input" value="Деревянные">
                     <div class="quiz-list__item-wrapper">
-                      <img class="quiz-list__img _img" src="../../images/quiz-6.webp" alt="">
+                      <img class="quiz-list__img _img" src="images/quiz-6.webp" alt="">
                     </div>
 
                     <h6 class="quiz-list__item-title">
@@ -498,7 +498,7 @@
                   <label class="quiz-list__label">
                     <input type="radio" name="quest-6" class="radio-input" value="Металлические">
                     <div class="quiz-list__item-wrapper">
-                      <img class="quiz-list__img _img" src="../../images/quiz-6.webp" alt="">
+                      <img class="quiz-list__img _img" src="images/quiz-6.webp" alt="">
                     </div>
 
                     <h6 class="quiz-list__item-title">
@@ -510,7 +510,7 @@
                   <label class="quiz-list__label">
                     <input type="radio" name="quest-6" class="radio-input" value="Кованные">
                     <div class="quiz-list__item-wrapper">
-                      <img class="quiz-list__img _img" src="../../images/quiz-6.webp" alt="">
+                      <img class="quiz-list__img _img" src="images/quiz-6.webp" alt="">
                     </div>
 
                     <h6 class="quiz-list__item-title">
@@ -522,7 +522,7 @@
                   <label class="quiz-list__label">
                     <input type="radio" name="quest-6" class="radio-input" value="Стеклянные">
                     <div class="quiz-list__item-wrapper">
-                      <img class="quiz-list__img _img" src="../../images/quiz-6.webp" alt="">
+                      <img class="quiz-list__img _img" src="images/quiz-6.webp" alt="">
                     </div>
 
                     <h6 class="quiz-list__item-title">
@@ -534,7 +534,7 @@
                   <label class="quiz-list__label">
                     <input type="radio" name="quest-6" class="radio-input" value="Из нержавеющей стали">
                     <div class="quiz-list__item-wrapper">
-                      <img class="quiz-list__img _img" src="../../images/quiz-6.webp" alt="">
+                      <img class="quiz-list__img _img" src="images/quiz-6.webp" alt="">
                     </div>
 
                     <h6 class="quiz-list__item-title">
@@ -546,7 +546,7 @@
                   <label class="quiz-list__label">
                     <input type="radio" name="quest-6" class="radio-input" value=" Лазерной резки">
                     <div class="quiz-list__item-wrapper">
-                      <img class="quiz-list__img _img" src="../../images/quiz-6.webp" alt="">
+                      <img class="quiz-list__img _img" src="images/quiz-6.webp" alt="">
                     </div>
 
                     <h6 class="quiz-list__item-title">
@@ -558,7 +558,7 @@
                   <label class="quiz-list__label">
                     <input type="radio" name="quest-6" class="radio-input" value="Тросовые">
                     <div class="quiz-list__item-wrapper">
-                      <img class="quiz-list__img _img" src="../../images/quiz-6.webp" alt="">
+                      <img class="quiz-list__img _img" src="images/quiz-6.webp" alt="">
                     </div>
 
                     <h6 class="quiz-list__item-title">
@@ -570,7 +570,7 @@
                   <label class="quiz-list__label">
                     <input type="radio" name="quest-6" class="radio-input" value="С балясинами">
                     <div class="quiz-list__item-wrapper">
-                      <img class="quiz-list__img _img" src="../../images/quiz-6.webp" alt="">
+                      <img class="quiz-list__img _img" src="images/quiz-6.webp" alt="">
                     </div>
 
                     <h6 class="quiz-list__item-title">
@@ -582,7 +582,7 @@
                   <label class="quiz-list__label">
                     <input type="radio" name="quest-6" class="radio-input" value=" Не нужно">
                     <div class="quiz-list__item-wrapper">
-                      <img class="quiz-list__img _img" src="../../images/quiz-6.webp" alt="">
+                      <img class="quiz-list__img _img" src="images/quiz-6.webp" alt="">
                     </div>
 
                     <h6 class="quiz-list__item-title">
@@ -680,7 +680,7 @@
                   @@include('../../images/icons/check.svg')
                 </span>
                 <p>
-                  Я принимаю условия <a data-fancybox="" class="_link" href="#policy">политики конфиденциальности</a>
+                  Я принимаю условия <a data-fancybox="" class="_link" href="#politics">политики конфиденциальности</a>
                 </p>
               </label>
               <button class="form-block__btn _main-btn" type="submit">
