--- a/app/html/blocks/section-1.html
+++ b/app/html/blocks/section-1.html
@@ -9,7 +9,7 @@
         <p class="section-1__subtitle">
           Напрямую от производителя с пожизненной гарантией на металлокаркас
         </p>
-        <a class="section-1__btn _main-btn" href="#">
+        <a class="section-1__btn _main-btn" href="#quiz-modal" data-fancybox="">
           Рассчитайте стоимость установки
         </a>
       </div>
