--- a/app/html/blocks/section-18.html
+++ b/app/html/blocks/section-18.html
@@ -4,8 +4,8 @@
       Выбирая Лестницы СПБ, вы выбираете качество, <span>внимание к деталям и профессионализм</span>
     </h2>
   </div>
-  <a class="section-18__video" href="../../images/section-18-video.webp" data-fancybox>
-    <img class="section-18__video-img _img" src="../../images/section-18-video.webp" alt="video">
+  <a class="section-18__video" href="images/section-18-video.webp" data-fancybox>
+    <img class="section-18__video-img _img" src="images/section-18-video.webp" alt="video">
     <div class="play">
       <div class="play__inner">
         <img class="play__img" src="images/icons/play.svg" alt="play">
