--- a/app/html/blocks/section-22.html
+++ b/app/html/blocks/section-22.html
@@ -98,7 +98,7 @@
     <form class="section-22__form form-submit" action="#" method="POST" enctype="multipart/form-data">
       <input type="hidden" name="from" value="Заказать 3D проект будущей лестницы">
       <input type="hidden" name="newToken" value="<?php echo (rand(10000, 99999)) ?>">
-      <img class="section-22__form-img" src="../../images/section-22-1.webp" alt="phone">
+      <img class="section-22__form-img" src="images/section-22-1.webp" alt="phone">
       <h3 class="section-22__form-title relative">
         Заказать 3D проект будущей лестницы
       </h3>
@@ -108,10 +108,10 @@
         </p>
         <div class="section-22__links socials">
           <a class="socials__link" href="#">
-            <img class="socials__img" src="../../images/icons/telegram.svg" alt="telegram">
+            <img class="socials__img" src="images/icons/telegram.svg" alt="telegram">
           </a>
           <a class="socials__link" href="#">
-            <img class="socials__img" src="../../images/icons/whatsapp.svg" alt="whatsapp">
+            <img class="socials__img" src="images/icons/whatsapp.svg" alt="whatsapp">
           </a>
         </div>
       </div>
