--- a/app/html/blocks/section-23.html
+++ b/app/html/blocks/section-23.html
@@ -6,8 +6,8 @@
     <div class="section-23__swiper swiper">
       <div class="swiper-wrapper">
         <div class="swiper-slide section-23__slide">
-          <a class="section-23__slide-wrapper" href="../../images/section-23-1.webp" data-fancybox>
-            <img class="section-23__slide-img _img" src="../../images/section-23-1.webp" alt="">
+          <a class="section-23__slide-wrapper" href="images/section-23-1.webp" data-fancybox>
+            <img class="section-23__slide-img _img" src="images/section-23-1.webp" alt="">
             <div class="play">
               <div class="play__inner">
                 <img class="play__img" src="images/icons/play.svg" alt="play">
@@ -25,8 +25,8 @@
           </div>
         </div>
         <div class="swiper-slide section-23__slide">
-          <a class="section-23__slide-wrapper" href="../../images/section-23-2.webp" data-fancybox>
-            <img class="section-23__slide-img _img" src="../../images/section-23-2.webp" alt="">
+          <a class="section-23__slide-wrapper" href="images/section-23-2.webp" data-fancybox>
+            <img class="section-23__slide-img _img" src="images/section-23-2.webp" alt="">
             <div class="play">
               <div class="play__inner">
                 <img class="play__img" src="images/icons/play.svg" alt="play">
@@ -44,8 +44,8 @@
           </div>
         </div>
         <div class="swiper-slide section-23__slide">
-          <a class="section-23__slide-wrapper" href="../../images/section-23-3.webp" data-fancybox>
-            <img class="section-23__slide-img _img" src="../../images/section-23-3.webp" alt="">
+          <a class="section-23__slide-wrapper" href="images/section-23-3.webp" data-fancybox>
+            <img class="section-23__slide-img _img" src="images/section-23-3.webp" alt="">
             <div class="play">
               <div class="play__inner">
                 <img class="play__img" src="images/icons/play.svg" alt="play">
@@ -63,8 +63,8 @@
           </div>
         </div>
         <div class="swiper-slide section-23__slide">
-          <a class="section-23__slide-wrapper" href="../../images/section-23-1.webp" data-fancybox>
-            <img class="section-23__slide-img _img" src="../../images/section-23-1.webp" alt="">
+          <a class="section-23__slide-wrapper" href="images/section-23-1.webp" data-fancybox>
+            <img class="section-23__slide-img _img" src="images/section-23-1.webp" alt="">
             <div class="play">
               <div class="play__inner">
                 <img class="play__img" src="images/icons/play.svg" alt="play">
@@ -82,8 +82,8 @@
           </div>
         </div>
         <div class="swiper-slide section-23__slide">
-          <a class="section-23__slide-wrapper" href="../../images/section-23-2.webp" data-fancybox>
-            <img class="section-23__slide-img _img" src="../../images/section-23-2.webp" alt="">
+          <a class="section-23__slide-wrapper" href="images/section-23-2.webp" data-fancybox>
+            <img class="section-23__slide-img _img" src="images/section-23-2.webp" alt="">
             <div class="play">
               <div class="play__inner">
                 <img class="play__img" src="images/icons/play.svg" alt="play">
@@ -101,8 +101,8 @@
           </div>
         </div>
         <div class="swiper-slide section-23__slide">
-          <a class="section-23__slide-wrapper" href="../../images/section-23-1.webp" data-fancybox>
-            <img class="section-23__slide-img _img" src="../../images/section-23-1.webp" alt="">
+          <a class="section-23__slide-wrapper" href="images/section-23-1.webp" data-fancybox>
+            <img class="section-23__slide-img _img" src="images/section-23-1.webp" alt="">
             <div class="play">
               <div class="play__inner">
                 <img class="play__img" src="images/icons/play.svg" alt="play">
@@ -120,8 +120,8 @@
           </div>
         </div>
         <div class="swiper-slide section-23__slide">
-          <a class="section-23__slide-wrapper" href="../../images/section-23-2.webp" data-fancybox>
-            <img class="section-23__slide-img _img" src="../../images/section-23-2.webp" alt="">
+          <a class="section-23__slide-wrapper" href="images/section-23-2.webp" data-fancybox>
+            <img class="section-23__slide-img _img" src="images/section-23-2.webp" alt="">
             <div class="play">
               <div class="play__inner">
                 <img class="play__img" src="images/icons/play.svg" alt="play">
