--- a/app/html/blocks/section-24.html
+++ b/app/html/blocks/section-24.html
@@ -4,7 +4,7 @@
       Вы дизайнер? Повышайте уровень своих<br>
       проектов вместе с нами!
     </h2>
-    <img class="section-24__form-img" src="../../images/section-24-1.webp" alt="notebook">
+    <img class="section-24__form-img" src="images/section-24-1.webp" alt="notebook">
     <form class="section-24__form section-11__form form-submit" action="#" method="POST" enctype="multipart/form-data">
       <input type="hidden" name="from" value="Получить каталог трендовых кухонь и корпусной мебели">
       <input type="hidden" name="newToken" value="<?php echo (rand(10000, 99999)) ?>">
