--- a/app/html/blocks/section-4.html
+++ b/app/html/blocks/section-4.html
@@ -72,7 +72,7 @@
         <h4 class="section-4__item-title">
           Лестницы на ломанных косоурах
         </h4>
-        <a class="section-4__item-btn _main-btn" href="#">
+        <a class="section-4__item-btn _main-btn" href="#callback" data-fancybox>
           Подробнее
         </a>
       </div>
@@ -81,7 +81,7 @@
         <h4 class="section-4__item-title">
           Лестницы на монокосоуре
         </h4>
-        <a class="section-4__item-btn _main-btn" href="#">
+        <a class="section-4__item-btn _main-btn" href="#callback" data-fancybox>
           Подробнее
         </a>
       </div>
@@ -90,7 +90,7 @@
         <h4 class="section-4__item-title">
           На тетивах
         </h4>
-        <a class="section-4__item-btn _main-btn" href="#">
+        <a class="section-4__item-btn _main-btn" href="#callback" data-fancybox>
           Подробнее
         </a>
       </div>
@@ -99,7 +99,7 @@
         <h4 class="section-4__item-title">
           В стиле лофт на лезерной резке
         </h4>
-        <a class="section-4__item-btn _main-btn" href="#">
+        <a class="section-4__item-btn _main-btn" href="#callback" data-fancybox>
           Подробнее
         </a>
       </div>
@@ -108,7 +108,7 @@
         <h4 class="section-4__item-title">
           Гусиный шаг
         </h4>
-        <a class="section-4__item-btn _main-btn" href="#">
+        <a class="section-4__item-btn _main-btn" href="#callback" data-fancybox>
           Подробнее
         </a>
       </div>
