--- a/app/html/blocks/header.html
+++ b/app/html/blocks/header.html
@@ -16,7 +16,7 @@
       <div class="container">
         <div class="header__inner">
           <a class="header__logo logo" href="/">
-            <img class="header__logo-img" src="../../images/logo.webp" alt="">
+            <img class="header__logo-img" src="images/logo.webp" alt="">
           </a>
           <div class="header__item header__work">
             @@include('../../images/icons/time.svg')
