--- a/app/html/blocks/section-10.html
+++ b/app/html/blocks/section-10.html
@@ -7,7 +7,7 @@
       <div class="swiper-wrapper">
         <div class="section-10__slide swiper-slide">
           <div class="section-10__slide-wrapper">
-            <img class="section-10__slide-img _img" src="../../images/section-10-1.webp" alt="">
+            <img class="section-10__slide-img _img" src="images/section-10-1.webp" alt="">
           </div>
           <div class="section-10__slide-info">
             <div class="section-10__slide-num">
@@ -26,7 +26,7 @@
         </div>
         <div class="section-10__slide swiper-slide">
           <div class="section-10__slide-wrapper">
-            <img class="section-10__slide-img _img" src="../../images/section-10-2.webp" alt="">
+            <img class="section-10__slide-img _img" src="images/section-10-2.webp" alt="">
           </div>
           <div class="section-10__slide-info">
             <div class="section-10__slide-num">
@@ -45,7 +45,7 @@
         </div>
         <div class="section-10__slide swiper-slide">
           <div class="section-10__slide-wrapper">
-            <img class="section-10__slide-img _img" src="../../images/section-10-3.webp" alt="">
+            <img class="section-10__slide-img _img" src="images/section-10-3.webp" alt="">
           </div>
           <div class="section-10__slide-info">
             <div class="section-10__slide-num">
@@ -62,7 +62,7 @@
         </div>
         <div class="section-10__slide swiper-slide">
           <div class="section-10__slide-wrapper">
-            <img class="section-10__slide-img _img" src="../../images/section-10-4.webp" alt="">
+            <img class="section-10__slide-img _img" src="images/section-10-4.webp" alt="">
           </div>
           <div class="section-10__slide-info">
             <div class="section-10__slide-num">
@@ -76,7 +76,7 @@
         </div>
         <div class="section-10__slide swiper-slide">
           <div class="section-10__slide-wrapper">
-            <img class="section-10__slide-img _img" src="../../images/section-10-5.webp" alt="">
+            <img class="section-10__slide-img _img" src="images/section-10-5.webp" alt="">
           </div>
           <div class="section-10__slide-info">
             <div class="section-10__slide-num">
@@ -92,7 +92,7 @@
         </div>
         <div class="section-10__slide swiper-slide">
           <div class="section-10__slide-wrapper">
-            <img class="section-10__slide-img _img" src="../../images/section-10-6.webp" alt="">
+            <img class="section-10__slide-img _img" src="images/section-10-6.webp" alt="">
           </div>
           <div class="section-10__slide-info">
             <div class="section-10__slide-num">
