--- a/app/html/blocks/section-12.html
+++ b/app/html/blocks/section-12.html
@@ -9,7 +9,7 @@
     </p>
     <div class="section-12__items">
       <div class="section-12__item">
-        <img class="section-12__item-img _img" src="../../images/section-12-1.webp" alt="">
+        <img class="section-12__item-img _img" src="images/section-12-1.webp" alt="">
         <div class="overlay"></div>
         <div class="section-12__item-inner">
           <h3 class="section-12__item-title">
@@ -26,7 +26,7 @@
         </div>
       </div>
       <div class="section-12__item">
-        <img class="section-12__item-img _img" src="../../images/section-12-2.webp" alt="">
+        <img class="section-12__item-img _img" src="images/section-12-2.webp" alt="">
         <div class="overlay"></div>
         <div class="section-12__item-inner">
           <h3 class="section-12__item-title">
@@ -108,7 +108,7 @@
     </div>
     <div class="section-12__elems">
       <div class="section-12__elem">
-        <img class="section-12__elem-img _img" src="../../images/section-12-3.webp" alt="">
+        <img class="section-12__elem-img _img" src="images/section-12-3.webp" alt="">
         <div class="section-12__elem-info">
           <p class="section-12__elem-text">
             К вам мы привозим уже заранее
@@ -118,7 +118,7 @@
         </div>
       </div>
       <div class="section-12__elem">
-        <img class="section-12__elem-img _img" src="../../images/section-12-4.webp" alt="">
+        <img class="section-12__elem-img _img" src="images/section-12-4.webp" alt="">
         <div class="section-12__elem-info ">
           <p class="section-12__elem-text">
             При монтаже в помещении с чистовой
