--- a/app/html/blocks/section-13.html
+++ b/app/html/blocks/section-13.html
@@ -8,7 +8,7 @@
     <form class="section-13__form form-submit" action="#" method="POST" enctype="multipart/form-data">
       <input type="hidden" name="from" value="Получить подборку проектов">
       <input type="hidden" name="newToken" value="<?php echo (rand(10000, 99999)) ?>">
-      <img class="section-13__img" src="../../images/section-13-1.webp" alt="">
+      <img class="section-13__img" src="images/section-13-1.webp" alt="">
       <h3 class="section-13__form-title relative">
         Каталог лестниц с примерными <br>
         ценами актуальными на <span>6 сентября</span>
