--- a/app/html/blocks/section-15.html
+++ b/app/html/blocks/section-15.html
@@ -29,10 +29,10 @@
             <input class="section-15__form-tel _input" type="tel" placeholder="Номер телефона">
             <div class="section-15__links socials">
               <a class="socials__link" href="#">
-                <img class="socials__img" src="../../images/icons/telegram.svg" alt="telegram">
+                <img class="socials__img" src="images/icons/telegram.svg" alt="telegram">
               </a>
               <a class="socials__link" href="#">
-                <img class="socials__img" src="../../images/icons/whatsapp.svg" alt="whatsapp">
+                <img class="socials__img" src="images/icons/whatsapp.svg" alt="whatsapp">
               </a>
             </div>
           </div>
@@ -107,7 +107,7 @@
         </div>
         <div class="section-15__items">
           <div class="section-15__item">
-            <img class="section-15__item-img _img" src="../../images/section-15-1.webp" alt="section-15-1">
+            <img class="section-15__item-img _img" src="images/section-15-1.webp" alt="section-15-1">
             <div class="overlay"></div>
             <div class="section-15__step-pin step-pin">
               <div class="step-pin__num">02</div>
@@ -130,7 +130,7 @@
             </div>
           </div>
           <div class="section-15__item">
-            <img class="section-15__item-img _img" src="../../images/section-15-2.webp" alt="section-15-2">
+            <img class="section-15__item-img _img" src="images/section-15-2.webp" alt="section-15-2">
             <div class="overlay"></div>
             <div class="section-15__step-pin step-pin">
               <div class="step-pin__num">03</div>
@@ -153,7 +153,7 @@
             </div>
           </div>
           <div class="section-15__item">
-            <img class="section-15__item-img _img" src="../../images/section-15-3.webp" alt="section-15-3">
+            <img class="section-15__item-img _img" src="images/section-15-3.webp" alt="section-15-3">
             <div class="overlay"></div>
             <div class="section-15__step-pin step-pin">
               <div class="step-pin__num">04</div>
@@ -210,13 +210,13 @@
               лестницы)
             </li>
           </ul>
-          <a class="section-15__step-btn _main-btn" href="#">
+          <a class="section-15__step-btn _main-btn" href="#callback" data-fancybox>
             Есть возможность оплаты через сайт
           </a>
         </div>
         <div class="section-15__right">
           <div class="section-15__right-wrapper">
-            <img class="section-15__right-img _img" src="../../images/section-15-4.webp" alt="section-15-4">
+            <img class="section-15__right-img _img" src="images/section-15-4.webp" alt="section-15-4">
           </div>
         </div>
       </div>
@@ -240,13 +240,13 @@
               конструкционных элементов
             </li>
           </ul>
-          <a class="section-15__step-btn _main-btn" href="#">
+          <a class="section-15__step-btn _main-btn" href="#callback" data-fancybox>
             Срок: от 1 до 4х недель после подписания договора
           </a>
         </div>
         <div class="section-15__right">
           <div class="section-15__right-wrapper">
-            <img class="section-15__right-img _img" src="../../images/section-15-5.webp" alt="section-15-5">
+            <img class="section-15__right-img _img" src="images/section-15-5.webp" alt="section-15-5">
           </div>
         </div>
       </div>
@@ -276,7 +276,7 @@
               в том числе и по выходным дням
             </li>
           </ul>
-          <a class="section-15__step-btn _main-btn" href="#">
+          <a class="section-15__step-btn _main-btn" href="#callback" data-fancybox>
             Срок монтажа занимает от 1 до 3 дней*
           </a>
           <p class="section-15__step-descr">
@@ -285,7 +285,7 @@
         </div>
         <div class="section-15__right">
           <div class="section-15__right-wrapper">
-            <img class="section-15__right-img _img" src="../../images/section-15-6.webp" alt="section-15-6">
+            <img class="section-15__right-img _img" src="images/section-15-6.webp" alt="section-15-6">
           </div>
         </div>
       </div>
@@ -312,13 +312,13 @@
               обслуживанию
             </li>
           </ul>
-          <a class="section-15__step-btn _main-btn" href="#">
+          <a class="section-15__step-btn _main-btn" href="#callback" data-fancybox>
             Срок: от 1 до 4х недель после подписания договора
           </a>
         </div>
         <div class="section-15__right">
           <div class="section-15__right-wrapper">
-            <img class="section-15__right-img _img" src="../../images/section-15-7.webp" alt="section-15-7">
+            <img class="section-15__right-img _img" src="images/section-15-7.webp" alt="section-15-7">
           </div>
         </div>
       </div>
