--- a/app/html/blocks/section-16.html
+++ b/app/html/blocks/section-16.html
@@ -68,7 +68,7 @@
     </div>
     <div class="section-16__items">
       <div class="section-16__item">
-        <img class="section-16__item-img _img" src="../../images/section-16-1.webp" alt="">
+        <img class="section-16__item-img _img" src="images/section-16-1.webp" alt="">
         <div class="overlay"></div>
         <div class="section-16__item-inner">
           <h3 class="section-16__item-title ">
@@ -82,7 +82,7 @@
         </div>
       </div>
       <div class="section-16__item">
-        <img class="section-16__item-img _img" src="../../images/section-16-2.webp" alt="">
+        <img class="section-16__item-img _img" src="images/section-16-2.webp" alt="">
         <div class="overlay"></div>
         <div class="section-16__item-inner">
           <h3 class="section-16__item-title">
@@ -94,7 +94,7 @@
         </div>
       </div>
       <div class="section-16__item">
-        <img class="section-16__item-img _img" src="../../images/section-16-3.webp" alt="">
+        <img class="section-16__item-img _img" src="images/section-16-3.webp" alt="">
         <div class="overlay"></div>
         <div class="section-16__item-inner">
           <h3 class="section-16__item-title">
@@ -111,7 +111,7 @@
         </div>
       </div>
       <div class="section-16__item">
-        <img class="section-16__item-img _img" src="../../images/section-16-4.webp" alt="">
+        <img class="section-16__item-img _img" src="images/section-16-4.webp" alt="">
         <div class="overlay"></div>
         <div class="section-16__item-inner">
           <h3 class="section-16__item-title">
