--- a/app/html/blocks/section-17.html
+++ b/app/html/blocks/section-17.html
@@ -158,7 +158,7 @@
     <div class="section-17__elems">
       <div class="section-17__elem">
         <div class="section-17__elem-wrapper">
-          <img class="section-17__elem-img _img" src="../../images/section-17-1.webp" alt="">
+          <img class="section-17__elem-img _img" src="images/section-17-1.webp" alt="">
         </div>
         <div class="section-17__elem-info">
           <h4 class="section-17__elem-title">
@@ -181,7 +181,7 @@
       </div>
       <div class="section-17__elem">
         <div class="section-17__elem-wrapper">
-          <img class="section-17__elem-img _img" src="../../images/section-17-2.webp" alt="">
+          <img class="section-17__elem-img _img" src="images/section-17-2.webp" alt="">
         </div>
         <div class="section-17__elem-info">
           <h4 class="section-17__elem-title">
@@ -199,7 +199,7 @@
       </div>
       <div class="section-17__elem">
         <div class="section-17__elem-wrapper">
-          <img class="section-17__elem-img _img" src="../../images/section-17-3.webp" alt="">
+          <img class="section-17__elem-img _img" src="images/section-17-3.webp" alt="">
         </div>
         <div class="section-17__elem-info">
           <h4 class="section-17__elem-title">
@@ -220,7 +220,7 @@
       </div>
       <div class="section-17__elem">
         <div class="section-17__elem-wrapper">
-          <img class="section-17__elem-img _img" src="../../images/section-17-4.webp" alt="">
+          <img class="section-17__elem-img _img" src="images/section-17-4.webp" alt="">
         </div>
         <div class="section-17__elem-info">
           <h4 class="section-17__elem-title">
