--- a/app/html/blocks/section-19.html
+++ b/app/html/blocks/section-19.html
@@ -142,23 +142,23 @@
         </svg>
       </div>
       <div class="section-19__items">
-        <a class="section-19__item filters-item one" href="../../images/section-19-1.webp" data-fancybox>
-          <img class="section-19__item-img _img" src="../../images/section-19-1.webp" alt="">
+        <a class="section-19__item filters-item one" href="images/section-19-1.webp" data-fancybox>
+          <img class="section-19__item-img _img" src="images/section-19-1.webp" alt="">
         </a>
-        <a class="section-19__item filters-item one" href="../../images/section-19-2.webp" data-fancybox>
-          <img class="section-19__item-img _img" src="../../images/section-19-2.webp" alt="">
+        <a class="section-19__item filters-item one" href="images/section-19-2.webp" data-fancybox>
+          <img class="section-19__item-img _img" src="images/section-19-2.webp" alt="">
         </a>
-        <a class="section-19__item filters-item one" href="../../images/section-19-3.webp" data-fancybox>
-          <img class="section-19__item-img _img" src="../../images/section-19-3.webp" alt="">
+        <a class="section-19__item filters-item one" href="images/section-19-3.webp" data-fancybox>
+          <img class="section-19__item-img _img" src="images/section-19-3.webp" alt="">
         </a>
-        <a class="section-19__item filters-item one three" href="../../images/section-19-4.webp" data-fancybox>
-          <img class="section-19__item-img _img" src="../../images/section-19-4.webp" alt="">
+        <a class="section-19__item filters-item one three" href="images/section-19-4.webp" data-fancybox>
+          <img class="section-19__item-img _img" src="images/section-19-4.webp" alt="">
         </a>
-        <a class="section-19__item filters-item one" href="../../images/section-19-5.webp" data-fancybox>
-          <img class="section-19__item-img _img" src="../../images/section-19-5.webp" alt="">
+        <a class="section-19__item filters-item one" href="images/section-19-5.webp" data-fancybox>
+          <img class="section-19__item-img _img" src="images/section-19-5.webp" alt="">
         </a>
-        <a class="section-19__item filters-item one two" href="../../images/section-19-6.webp" data-fancybox>
-          <img class="section-19__item-img _img" src="../../images/section-19-6.webp" alt="">
+        <a class="section-19__item filters-item one two" href="images/section-19-6.webp" data-fancybox>
+          <img class="section-19__item-img _img" src="images/section-19-6.webp" alt="">
         </a>
       </div>
     </div>
