--- a/app/html/blocks/section-21.html
+++ b/app/html/blocks/section-21.html
@@ -8,37 +8,37 @@
     <div class="swiper-wrapper">
       <div class="swiper-slide section-21__slide">
         <div class="section-21__item">
-          <img class="section-21__item-img" src="../../images/section-21-1.webp" alt="">
+          <img class="section-21__item-img" src="images/section-21-1.webp" alt="">
         </div>
       </div>
       <div class="swiper-slide section-21__slide">
         <div class="section-21__item">
-          <img class="section-21__item-img" src="../../images/section-21-2.webp" alt="">
+          <img class="section-21__item-img" src="images/section-21-2.webp" alt="">
         </div>
       </div>
       <div class="swiper-slide section-21__slide">
         <div class="section-21__item">
-          <img class="section-21__item-img" src="../../images/section-21-3.webp" alt="">
+          <img class="section-21__item-img" src="images/section-21-3.webp" alt="">
         </div>
       </div>
       <div class="swiper-slide section-21__slide">
         <div class="section-21__item">
-          <img class="section-21__item-img" src="../../images/section-21-4.webp" alt="">
+          <img class="section-21__item-img" src="images/section-21-4.webp" alt="">
         </div>
       </div>
       <div class="swiper-slide section-21__slide">
         <div class="section-21__item">
-          <img class="section-21__item-img" src="../../images/section-21-5.webp" alt="">
+          <img class="section-21__item-img" src="images/section-21-5.webp" alt="">
         </div>
       </div>
       <div class="swiper-slide section-21__slide">
         <div class="section-21__item">
-          <img class="section-21__item-img" src="../../images/section-21-1.webp" alt="">
+          <img class="section-21__item-img" src="images/section-21-1.webp" alt="">
         </div>
       </div>
       <div class="swiper-slide section-21__slide">
         <div class="section-21__item">
-          <img class="section-21__item-img" src="../../images/section-21-3.webp" alt="">
+          <img class="section-21__item-img" src="images/section-21-3.webp" alt="">
         </div>
       </div>
     </div>
