--- a/app/html/blocks/section-5.html
+++ b/app/html/blocks/section-5.html
@@ -9,7 +9,7 @@
           <div class="section-5__slide swiper-slide">
             <div class="section-5__slide-item">
               <div class="section-5__slide-wrapper">
-                <img class="section-5__slide-img _img" src="../../images/section-5-1.webp" alt="">
+                <img class="section-5__slide-img _img" src="images/section-5-1.webp" alt="">
                 <div class="section-5__slide-num">
                   01
                 </div>
@@ -24,7 +24,7 @@
           <div class="section-5__slide swiper-slide">
             <div class="section-5__slide-item">
               <div class="section-5__slide-wrapper">
-                <img class="section-5__slide-img _img" src="../../images/section-5-2.webp" alt="">
+                <img class="section-5__slide-img _img" src="images/section-5-2.webp" alt="">
                 <div class="section-5__slide-num">
                   02
                 </div>
@@ -40,7 +40,7 @@
           <div class="section-5__slide swiper-slide">
             <div class="section-5__slide-item">
               <div class="section-5__slide-wrapper">
-                <img class="section-5__slide-img _img" src="../../images/section-5-3.webp" alt="">
+                <img class="section-5__slide-img _img" src="images/section-5-3.webp" alt="">
                 <div class="section-5__slide-num">
                   03
                 </div>
@@ -59,7 +59,7 @@
           <div class="section-5__slide swiper-slide">
             <div class="section-5__slide-item">
               <div class="section-5__slide-wrapper">
-                <img class="section-5__slide-img _img" src="../../images/section-5-4.webp" alt="">
+                <img class="section-5__slide-img _img" src="images/section-5-4.webp" alt="">
                 <div class="section-5__slide-num">
                   04
                 </div>
@@ -75,7 +75,7 @@
           <div class="section-5__slide swiper-slide">
             <div class="section-5__slide-item">
               <div class="section-5__slide-wrapper">
-                <img class="section-5__slide-img _img" src="../../images/section-5-5.webp" alt="">
+                <img class="section-5__slide-img _img" src="images/section-5-5.webp" alt="">
                 <div class="section-5__slide-num">
                   05
                 </div>
@@ -90,7 +90,7 @@
           <div class="section-5__slide swiper-slide">
             <div class="section-5__slide-item">
               <div class="section-5__slide-wrapper">
-                <img class="section-5__slide-img _img" src="../../images/section-5-6.webp" alt="">
+                <img class="section-5__slide-img _img" src="images/section-5-6.webp" alt="">
                 <div class="section-5__slide-num">
                   06
                 </div>
