--- a/app/html/blocks/section-6.html
+++ b/app/html/blocks/section-6.html
@@ -69,7 +69,7 @@
     <div class="section-6__items">
       <div class="section-6__item">
         <div class="section-6__item-wrapper">
-          <img class="section-6__item-img _img" src="../../images/section-6-1.webp" alt="">
+          <img class="section-6__item-img _img" src="images/section-6-1.webp" alt="">
         </div>
         <p class="section-6__item-text">
           Сосна
@@ -77,7 +77,7 @@
       </div>
       <div class="section-6__item">
         <div class="section-6__item-wrapper">
-          <img class="section-6__item-img _img" src="../../images/section-6-2.webp" alt="">
+          <img class="section-6__item-img _img" src="images/section-6-2.webp" alt="">
         </div>
         <p class="section-6__item-text">
           Лиственница
@@ -85,7 +85,7 @@
       </div>
       <div class="section-6__item">
         <div class="section-6__item-wrapper">
-          <img class="section-6__item-img _img" src="../../images/section-6-3.webp" alt="">
+          <img class="section-6__item-img _img" src="images/section-6-3.webp" alt="">
         </div>
         <p class="section-6__item-text">
           Бук
@@ -93,7 +93,7 @@
       </div>
       <div class="section-6__item">
         <div class="section-6__item-wrapper">
-          <img class="section-6__item-img _img" src="../../images/section-6-4.webp" alt="">
+          <img class="section-6__item-img _img" src="images/section-6-4.webp" alt="">
         </div>
         <p class="section-6__item-text">
           Дуб
@@ -101,7 +101,7 @@
       </div>
       <div class="section-6__item">
         <div class="section-6__item-wrapper">
-          <img class="section-6__item-img _img" src="../../images/section-6-5.webp" alt="">
+          <img class="section-6__item-img _img" src="images/section-6-5.webp" alt="">
         </div>
         <p class="section-6__item-text">
           Дуб
@@ -109,7 +109,7 @@
       </div>
       <div class="section-6__item">
         <div class="section-6__item-wrapper">
-          <img class="section-6__item-img _img" src="../../images/section-6-6.webp" alt="">
+          <img class="section-6__item-img _img" src="images/section-6-6.webp" alt="">
         </div>
         <p class="section-6__item-text">
           Террасная доска
@@ -117,7 +117,7 @@
       </div>
       <div class="section-6__item">
         <div class="section-6__item-wrapper">
-          <img class="section-6__item-img _img" src="../../images/section-6-7.webp" alt="">
+          <img class="section-6__item-img _img" src="images/section-6-7.webp" alt="">
         </div>
         <p class="section-6__item-text">
           Фанера
@@ -125,7 +125,7 @@
       </div>
       <div class="section-6__item">
         <div class="section-6__item-wrapper">
-          <img class="section-6__item-img _img" src="../../images/section-6-8.webp" alt="">
+          <img class="section-6__item-img _img" src="images/section-6-8.webp" alt="">
         </div>
         <p class="section-6__item-text">
           ПВЛ лист
@@ -133,7 +133,7 @@
       </div>
       <div class="section-6__item">
         <div class="section-6__item-wrapper">
-          <img class="section-6__item-img _img" src="../../images/section-6-9.webp" alt="">
+          <img class="section-6__item-img _img" src="images/section-6-9.webp" alt="">
         </div>
         <p class="section-6__item-text">
           Чечевица
@@ -141,7 +141,7 @@
       </div>
       <div class="section-6__item">
         <div class="section-6__item-wrapper">
-          <img class="section-6__item-img _img" src="../../images/section-6-10.webp" alt="">
+          <img class="section-6__item-img _img" src="images/section-6-10.webp" alt="">
         </div>
         <p class="section-6__item-text">
           Ценные породы дерева <br>
