--- a/app/html/blocks/section-8.html
+++ b/app/html/blocks/section-8.html
@@ -69,7 +69,7 @@
     </div>
     <div class="section-8__items">
       <div class="section-8__item relative">
-        <img class="section-8__item-img _img" src="../../images/section-8.webp" alt="">
+        <img class="section-8__item-img _img" src="images/section-8.webp" alt="">
         <div class="overlay"></div>
         <div class="section-8__item-info">
           <h3 class="section-8__item-title">
@@ -82,7 +82,7 @@
         </div>
       </div>
       <div class="section-8__item relative">
-        <img class="section-8__item-img _img" src="../../images/section-8.webp" alt="">
+        <img class="section-8__item-img _img" src="images/section-8.webp" alt="">
         <div class="overlay"></div>
         <div class="section-8__item-info">
           <h3 class="section-8__item-title">
@@ -98,7 +98,7 @@
         </div>
       </div>
       <div class="section-8__item relative">
-        <img class="section-8__item-img _img" src="../../images/section-8.webp" alt="">
+        <img class="section-8__item-img _img" src="images/section-8.webp" alt="">
         <div class="overlay"></div>
         <div class="section-8__item-info">
           <h3 class="section-8__item-title">
@@ -117,7 +117,7 @@
         </div>
       </div>
       <div class="section-8__item relative">
-        <img class="section-8__item-img _img" src="../../images/section-8.webp" alt="">
+        <img class="section-8__item-img _img" src="images/section-8.webp" alt="">
         <div class="overlay"></div>
         <div class="section-8__item-info">
           <h3 class="section-8__item-title">
