--- a/app/html/blocks/section-9.html
+++ b/app/html/blocks/section-9.html
@@ -5,7 +5,7 @@
     </h2>
     <div class="section-9__items">
       <div class="section-9__item relative">
-        <img class="section-9__item-img _img" src="../../images/section-9-bg.webp" alt="">
+        <img class="section-9__item-img _img" src="images/section-9-bg.webp" alt="">
         <div class="overlay"></div>
         <div class="section-9__item-inner relative">
           <h4 class="section-9__item-title ">
@@ -22,7 +22,7 @@
         </div>
       </div>
       <div class="section-9__item relative">
-        <img class="section-9__item-img _img" src="../../images/section-9-bg.webp" alt="">
+        <img class="section-9__item-img _img" src="images/section-9-bg.webp" alt="">
         <div class="overlay"></div>
         <div class="section-9__item-inner relative">
           <h4 class="section-9__item-title">
@@ -97,20 +97,20 @@
     </div>
     <div class="section-9__elems">
       <div class="section-9__elem">
-        <img class="section-9__elem-img _img" src="../../images/section-9-1.webp" alt="">
+        <img class="section-9__elem-img _img" src="images/section-9-1.webp" alt="">
         <h4 class="section-9__elem-title">
           Делаем жесткую контрукцию лестницы, которая "не гуляет" даже при частых и высоких нагрузках
         </h4>
       </div>
       <div class="section-9__elem">
-        <img class="section-9__elem-img _img" src="../../images/section-9-2.webp" alt="">
+        <img class="section-9__elem-img _img" src="images/section-9-2.webp" alt="">
         <h4 class="section-9__elem-title">
           При проектировании каркаса лестницы обеспечиваем надежную фиксацию и
           максимальную площадь опоры ступеней
         </h4>
       </div>
       <div class="section-9__elem">
-        <img class="section-9__elem-img _img" src="../../images/section-9-3.webp" alt="">
+        <img class="section-9__elem-img _img" src="images/section-9-3.webp" alt="">
         <h4 class="section-9__elem-title">
           Сборка всех деревянных элементов
           производится на специальный
